--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -26,7 +26,7 @@ Så er følgende udsagn ækvivalente:
 %
 \begin{proof}
 Antag, at $\text{span}\{\textbf{a}_i \mid i \in I\}= \R^n$.
-Dette span har dimension $n$, og jævnfør sætning \ref{} %(1.3(a) i bertsimas) 
+Dette span har dimension $n$, og jævnfør \ref{thm:spandim} %(1.3(a) i bertsimas) 
 kan en basis for spannet dannes med $n$ af vektorerne, som er lineært uafhængige.
 %
 Hvis der ligeledes eksisterer $n$ vektorer i $\{\textbf{a}_i \mid i \in I\}$, som er lineært uafhængige, må disse udspænde hele $\R^n$.
