--- a/incl/main/indledning/indledning.tex
+++ b/incl/main/indledning/indledning.tex
@@ -49,6 +49,6 @@ Begreber og sætninger, der er nødvendige for simplexmetoden, forefindes ligele
 Kapitlet indeholder en beskrivelse af samt et eksempel på brug af simplexmetoden som løsningsalgoritme.
 \end{itemize}
 %
-Foruden ovennævnte kapitler findes appendiks slutteligt i denne rapport.
+Foruden ovennævnte kapitler findes appendicer slutteligt i denne rapport.
 Kilder til indholdet af de enkelte afsnit angives i starten af hvert afsnit. 
 Alt i afsnittet er således fra disse kilder, medmindre andet er angivet. 
