--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -97,7 +97,7 @@ Slutteligt laves en udskiftning på $R_3$, hvor skaleringen $3R_1$ adderes med $
 En række i en matrix kaldes en \textit{nulrække}, hvis alle indgange er nul, og en \textit{ikke-nulrække}, hvis mindst én indgang i rækken er forskellig fra nul.
 Dette bruges til definitionen af \textit{trappeform}.
 %
-\begin{defn}{}{}
+\begin{defn}{}{trap}
 En matrix er på \textbf{trappeform}, hvis den opfylder følgende kriterier:
 \begin{enumerate}[label=(\alph*)]
 \item Enhver ikke-nulrække ligger over alle nulrækker.
