--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -123,7 +123,7 @@ Denne type basis kaldes for \textit{standard basis}.
 Der findes dog flere mulige baser for det samme underrum.
 %
 Pivotsøjlerne i en matrix udgør basis for dens søjlerum.
-Dette følger af \ref{thm:pivotu} i appendix.
+Dette følger af \ref{lem:pivotu} i appendicer.
 %
 \begin{thm}{}{}
 Lad $V$ være et ikke-nul-underrum af $\R^n$. Enhver to baser for $V$ indeholder det samme antal vektorer.
