--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -20,7 +20,8 @@ Et lineært maksimumsproblem kan opstilles som følgende:
 \end{array}
 \end{align*}
 %
-hvor $\textbf{c}^T\textbf{x}$ er objektfunktionen, \textcolor{red}{$z$ er omkostningen} og $\textbf{a}^T\textbf{x}$ er de lineære betingelser, samt $M_1, M_2, M_3, N_1, N_2$ er endelige mængder med indekser.
+hvor $\textbf{c}^T\textbf{x}$ er objektfunktionen og $\textbf{a}^T\textbf{x}$ er de lineære betingelser, samt $M_1, M_2, M_3, N_1, N_2$ er endelige mængder med indekser.
+$\textbf{c}$ er \textit{omkostningsvektoren} og $z$ er \textit{omkostningen}.
 \textit{Løsningsmængden} betegner mængden af vektorer, som opfylder alle betingelserne.
 Vektorer indeholdt i løsningsmængden kaldes for \textit{løsningsvektorer}.
 Hvis værdiområdet er uendeligt stort, er optimeringsproblemet \textit{ubegrænset}; ellers er det \textit{begrænset}. 
