--- a/incl/main/simplex_metoden/kompleksitet.tex
+++ b/incl/main/simplex_metoden/kompleksitet.tex
@@ -1,7 +1,7 @@
 \section{Kompleksitet}
 \label{kompleksitet}
-% he
-Det er interessant at undersøge simplexmetodens tidskompleksitet.
+% hehi
+Et vigtigt kriterium for valg af simplexmetoden er tidskompleksitet.
 Til beskrivelse af dette benyttes \textit{store-$O$} notation.
 %
 \begin{defn}{}{}
@@ -9,67 +9,70 @@ Lad $f(x)$ og $g(x)$ være vilkårlige funktioner. $f(x)$ er \textbf{store-$O$} 
 \end{defn}
 \noindent
 %
-Som beskrevet i afsnit \ref{julieergudesmuk} findes der forskellige implementere af simplexmetoden. Disse har  hver har sin tidskompleksitet og rumkompleksitet.
+Som beskrevet i afsnit \ref{julieergudesmuk} findes der forskellige implementeringer af simplexmetoden.
+Disse har hver deres tidskompleksitet og rumkompleksitet.\\\\
 %
-De tre implementeringer, der vil blive betragtet i dette afsnit, er fuld-tabel, den naive og den reviderede.\\\\
-%
-Fuld-tabel-metoden kræver et konstant antal af operationer for at opdatere indgangene i simplexmatricen.
-Derfor er antallet af operationer proportionelt med størrelsen på matricen og tidskompleksiteten er $O(mn)$ og rumkompleksiteten er $O(mn)$.\\\\
-%
+Fuld-tabel metoden kræver et konstant antal af operationer for at opdatere indgangene i simplextabellen.
+Derfor er antallet af operationer proportionelt med størrelsen på tabellen, og dermed er tidskompleksiteten og rumkompleksiteten $O(mn)$.\\\\
+%Aretmestiske operationer betyder bare udregninger
 Den naive implementering behøver $O(m^3)$ aritmetiske operationer for at løse systemerne $\mathbf{p}^T B=\mathbf{c}_{\text{B}}^T$ og $B\mathbf{u}=\mathbf{A}_j$.
-Ydermere kræver udregningen af den reducerede objektfunktion gældende
-% for alle variabler, 
-$O(mn)$ aritmetiske operationer, da det er nødvendigt at udregne de indre produkt af vekotren $\mathbf{p}$ for alle ikke-basis søjler i $\mathbf{A}_j$.
-Derfor er den samlede tidskompleksitet $O(m^3+mn)$ for den naive implementering.\\\\
+Ydermere kræver udregningen af den reducerede objektfunktion %gældende for alle variabler, 
+$O(mn)$ aritmetiske operationer, da det er nødvendigt at udregne det indre produkt af vektoren $\mathbf{p}$ for alle ikke-basissøjler i $\mathbf{A}_j$.
+Derfor er den samlede tidskompleksitet $O(m^3 + mn) = O(m^3)$ for den naive implementering.\\\\
 %
-Den reviderede metode bruger samme operationer som fuld-tabel implementeringen, men opdaterer kun $O(m^2)$ indgange og har derfor en tidskompleksiteten $O(m^2)$.
+Den reviderede metode bruger samme operationer som fuld-tabel implementeringen, men opdaterer kun $O(m^2)$ indgange og har derfor tidskompleksiteten $O(m^2)$.
 Det kan dog forekomme, at metoden skal opdatere alle variable.
 Hver udregning af en variabel kræver $O(m)$ operationer, hvilket medfører, at der i værste tilfælde bruges $O(mn)$ operationer.
 Da $m \leq n$, er tidskompleksiteten i værste tilfælde $O(mn)$.
-Med dette konkluderes det, at den reviderede metode aldrig vil køre langsommere end fuld-tabel og den naive implementering.
+Med dette konkluderes, at den reviderede metode aldrig vil køre langsommere end fuld-tabel og den naive implementering.
 Samtidigt vil en iteration fra den reviderede metode være hurtigere end fuld-tabel i alle andre tilfælde end det værste.
 Endnu et vigtigt element, som er tiltalende ved den reviderede metode, er rumkompleksiteten på $O(m^2)$.
 Her kan der igen være en ret betydelig forskel, afhængigt af størrelsen på $n$.\\\\
 %
 Selvom antallet af basale mulige løsninger kan stige eksponentielt med antallet af variable og betingelser, så har simplexmetoden typisk fundet en optimal løsning efter $O(m)$ iterationer.
-Dog eksisterer der polyedre, hvor antallet af pivoteringer påkrævet stiger eksponentielt.
-For ikke-degenererede problemer bevæger simplexmetoden sig altid fra et ekstremumspunkt til en af dets naboer og forbedre værdien af objektfunktionen.
-Betragt et polyeder med eksponentielt antal af ekstremumspunkter samt en sti der besøger alle ekstremumspunkter.
-Stien er lavet ved, fra et ekstremumspunkt, at besøge et ekstremumspunkt med mindre værdi.
-Med sådan et polyeder vil simplexmetoden, med en pivoteringsregl, som følger stien, kræve et eksponentielt antal af pivoteringer.
+Dog eksisterer der polyedre, hvor antallet af påkrævede pivoteringer  stiger eksponentielt.
+For ikke-degenererede problemer bevæger simplexmetoden sig altid fra et ekstremumspunkt til en af dets naboer og forbedrer omkostningen.
+Lad et polyeder have et eksponentielt antal af ekstremumspunkter, og lad en sti besøge alle disse.
+Denne sti er konstrueret ved, fra et ekstremumspunkt, at besøge et ekstremumspunkt med mindre omkostning.
+Med sådan et polyeder vil simplexmetoden, med en pivoteringsregel, som følger stien, kræve et eksponentielt antal af pivoteringer.
 %%
 \begin{thm}{}{}
-Betragt det lineære programmeringsproblem, hvor objektfunktionen $-x_n$ minimeres med betingelserne $\varepsilon \leq x_1 \leq 1$ og $\varepsilon x_{i-1} \leq x_i \leq 1 - \varepsilon x_{i-1}$ for $i = 2, 3, \ldots, n$ og $0 < \varepsilon < \frac{1}{2}$.
-Så gælder det, at:
+Betragt det lineære optimeringsproblem, hvor objektfunktionen $-x_n$ minimeres med betingelserne $\varepsilon \leq x_1 \leq 1$ og $\varepsilon x_{i-1} \leq x_i \leq 1 - \varepsilon x_{i-1}$ for $i = 2, 3, \ldots, n$ og $0 < \varepsilon < \frac{1}{2}$.
+Så gælder det, at
 %
 \begin{enumerate}[label=(\alph*)]
-\item Løsningsmængden har $2^n$ ekstremumspunkt.
+\item Løsningsmængden har $2^n$ ekstremumspunkter.
 \item Ekstremumspunkterne kan arrangeres således, at hver er nabo til og har lavere værdi end det forrige ekstremumspunkt.
-\item Der eksisterer en pivoteringsregl til simplexmetoden således, at den kræver $2^n-1$ pivoteringer før den er færdig.
+\item Der eksisterer en pivoteringsregel til simplexmetoden, således at den kræver $2^n-1$ pivoteringer, før algoritmen afsluttes.
 \end{enumerate}
 %
 \end{thm}
 %
 \begin{proof}
 %
-Lad $\mathcal{P}_n$ være et polyeder i $\R^n$ begrænset af betingelserne $\varepsilon \leq x_1 \leq 1$ og $\varepsilon x_{i-1} \leq x_i \leq 1 - \varepsilon x_{i-1}$ for $i = 2, 3, \ldots, n$ og $0 < \varepsilon < \frac{1}{2}$.
+Lad $\mathcal{P}_n$ være et polyeder i $\R^n$, begrænset af betingelserne $\varepsilon \leq x_1 \leq 1$ og $\varepsilon x_{i-1} \leq x_i \leq 1 - \varepsilon x_{i-1}$ for $i = 2, 3, \ldots, n$ og $0 < \varepsilon < \frac{1}{2}$.
 %
 \begin{enumerate}[label = (\alph*)]
-\item Ved induktion vises det, at $\mathcal{P}_n$ har $2^n$ ekstremumspunkter. 
-Basistrinnet, hvor $n=1$ følger trivielt.
+\item Ved induktion vises, at $\mathcal{P}_n$ har $2^n$ ekstremumspunkter. 
+Basistrinnet, hvor $n=1$, følger trivielt.
 Antag nu, at resultatet gælder for $n=k$.
 Polyederet $\mathcal{P}_{k+1}$ er begrænset af samme betingelser som $\mathcal{P}_{k}$ med tilføjelse af betingelsen $\varepsilon x_{k} \leq x_{k+1} \leq 1 - \epsilon x_{k}$.
-Den øvre og nedre begrænsning i $\varepsilon x_{k} \leq x_{k+1} \leq 1 - \varepsilon x_{k}$ kan ikke skære hinanden mens $ 0 \leq x_k \leq 1$ er opfyldt.
+Den øvre og nedre begrænsning i $\varepsilon x_{k} \leq x_{k+1} \leq 1 - \varepsilon x_{k}$ kan ikke skære hinanden, mens $ 0 \leq x_k \leq 1$ er opfyldt.
 Dette medfører, at hvert ekstremumspunkt i $\mathcal{P}_{k}$ giver anledning til to entydige ekstremumspunkter i $\mathcal{P}_{k+1}$, hvilket viser (a).
 \item Med induktion vises det, at ekstremumspunkterne i $\mathcal{P}_n$ kan arrangeres således, at hvert ekstremumspunkt er nabo til og har mindre værdi end det forrige ekstremumspunkt.
 Basistrinnet for $n=1$ følger trivielt.
 Antag nu, at resultatet gælder for  $n = k$.
 $\mathcal{P}_{k+1}$ kan deles i to $\mathcal{P}_{k}$ polyedre.
-Et, hvor $\varepsilon x_{k} \leq x_{k+1}$ er aktiv og et, hvor $x_{k+1} \leq 1 - \varepsilon x_{k}$ er aktiv.
-Da er det muligt at finde den ønskede udspændende sti i $\mathcal{P}_{k+1}$ ved først at tage den udspændende sti i $\mathcal{P}_{k}$, hvor $\varepsilon x_{k} \leq x_{k+1}$ er aktiv, skifte til $\mathcal{P}_{k}$, hvor $x_{k+1} \leq 1 - \varepsilon x_{k}$ er aktiv og tage dennes udspændende sti i modsat rækkefølge.
-Dette viser (b), da $x_k$ er stærkt voksende i det første $\mathcal{P}_{k}$ og stærkt faldende i det andet $\mathcal{P}_{k}$, hvilket medfører, at $x_{k+1}$ er stærkt voksende hele stien.
-\item Jævnfør \ref{julieerfantalastiskogvidunderlig} bevæger simplexmetoden sig altid fra nabo til nabo, når problemet ikke er degenereret. Med udgangspunkt i (b) vides det, at der eksistere en udspændende sti, som ender i problemets optimale løsning og $\textbf{c}^T\textbf{x}_i < \textbf{c}^T\textbf{x}_{i-1}$ for $i = 2, 3, \ldots ,n$.
-Dette medfører, at en pivoteringsregl, som ønsker at minimere mindst muligt pr. pivotering følger den udspændende sti og besøger alle $2^n$ ekstremumspunkter, hvilket viser (c).
+Et polyeder, hvor $\varepsilon x_{k} \leq x_{k+1}$ er aktiv og et polyeder, hvor $x_{k+1} \leq 1 - \varepsilon x_{k}$ er aktiv.
+Således er det muligt at finde den ønskede udspændende sti i $\mathcal{P}_{k+1}$ ved først at tage den udspændende sti i $\mathcal{P}_{k}$, hvor $\varepsilon x_{k} \leq x_{k+1}$ er aktiv, og dernæst at skifte til $\mathcal{P}_{k}$, hvor $x_{k+1} \leq 1 - \varepsilon x_{k}$ er aktiv og tage dennes udspændende sti i modsat rækkefølge.
+Dette viser (b), da $x_k$ er strengt voksende i det første $\mathcal{P}_{k}$ og strengt faldende i det andet $\mathcal{P}_{k}$, hvilket medfører, at $x_{k+1}$ er strengt voksende gennem hele stien.
+%
+\item Jævnfør \textcolor{red}{afsnit \ref{julieerfantalastiskogvidunderlig}} bevæger simplexmetoden sig altid fra nabo til nabo, når problemet ikke er degenereret.
+Med udgangspunkt i (b) vides det, at der eksisterer en udspændende sti, som ender i problemets optimale løsning og $\textbf{c}^T\textbf{x}_i < \textbf{c}^T\textbf{x}_{i-1}$ for $i = 2, 3, \ldots ,n$.
+Dette medfører, at en pivoteringsregel, som mindsker omkostningen mindst muligt pr. pivotering, følger den udspændende sti og besøger alle $2^n$ ekstremumspunkter, hvilket viser (c).
 \end{enumerate}
 \end{proof}
 %
+Således er kompleksitet et vigtigt kriterium for valg af simplexmetode.
+Ligeledes er valg af pivoteringsregel afgørende, eftersom det i praktiske applikationer er de afgørende faktorer for algoritmens brugbarhed.
+%Køb en Yamaha.
