--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -11,6 +11,11 @@ Bemærk, at afsnit \ref{afsnittet} tager afsæt i et maksimumsproblem, imens øv
 	\input{incl/main/simplex_metoden/geometrisktilgang}
 %
 %
+% Konstruktion af simplexmetoden
+% ---------------------------------------------------------
+	\input{incl/main/simplex_metoden/konstruktion_metod}
+%	
+%		
 % Eksempel til simplexmetoden
 % ---------------------------------------------------------
 	\input{incl/main/simplex_metoden/simplex_metoden_eksempel}
