--- a/incl/main/simplex_metoden/simplex_metoden_typer.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_typer.tex
@@ -1,6 +1,7 @@
 %
 \section{Implementering}
 \label{julieergudesmuk}
+\textcolor{red}{Metoden, hvor der bevæges fra en basal mulig løsning, til en ny basal mulig løsning, hvor omkostningen minimeres, ved hjælp af basale retninger i polyederet, kaldes simplexmetoden.}
 Der findes tre forskellige implementeringer af simplexmetoden, henholdsvis den \textit{naive}, den \textit{reviderede}, og \textit{fuld-tabel} implementeringen.
 %
 \subsection{Den naive implementering}
@@ -8,13 +9,13 @@ I den naive implementering af simplexmetoden overgår ingen af de bærende eleme
 For den indledende iteration, haves indekserne
 $B(1),\ldots,B(m)$ for de givne basale variable. 
 Derudfra kan der dannes en basismatrix $B$ og beregnes $\mathbf{p}^T=\mathbf{c}_{\text{B}}^T B^{-1}$ ved at løse det lineære ligningssystem $\mathbf{p}^T B=\mathbf{c}_{\text{B}}^T$ for den ukendte vektor $\mathbf{p}$.
-Den reducerede objektfunktion $c_j^* = c_j - \mathbf{c}_B^T B^{-1}A_j$ for enhver variabel $x_j$, er derfor givet ved formelen
+Den reducerede omkostning $c_j^* = c_j - \mathbf{c}_B^T B^{-1}A_j$ for enhver variabel $x_j$, er derfor givet ved formelen
 %
 \begin{align*}
 c_j^* = c_j - \mathbf{p}^T A_j.
 \end{align*}
 %
-Afhængigt af hvilken pivoteringsregel, som benyttes, er det nødvendigt at udregne alle de mulige reducerede objektfunktioner, eller i så fald udregne indtil en negativ objektfunktion opstår.
+Afhængigt af hvilken pivoteringsregel, som benyttes, er det nødvendigt at udregne alle de mulige reducerede omkostninger, \textcolor{red}{eller i så fald udregne indtil en negativ objektfunktion opstår.}
 Når en søjle $\mathbf{A}_j$ er valgt til at være en del af basen, løses det lineære ligningssystem $\mathbf{Bu}=\mathbf{A}_j$ for at bestemme vektoren $\mathbf{u}=\mathbf{B}^{-1}\mathbf{A}_j$.
 Ved hjælp af dette vil der kunne konstrueres den retning, hvor man bevæger sig væk fra de nuværende basale mulige løsninger.
 Endeligt kan $$\theta^* = \max \{ \theta \geq 0 \mid \textbf{x} + \theta^*\textbf{d} \in \mathcal{P} \}$$ bestemmes, samt den variabel der gør, at basen forlades, og derved kan en ny basal mulig løsning konstrueres. 
@@ -33,7 +34,7 @@ fonttitle	= \bfseries]
 \item Beregn den reducerede objektfunktion $c_j^* = c_j - \mathbf{c}_B^T \textbf{B}^{-1}A_j$ for alle ikke-basale indekser $j$. Hvis de alle er ikke-negative, så er den nuværende basale mulige løsning optimal; ellers vælges et indeks $j$, hvorom det gælder, at $c^*_j<0.$
 \item Udregn $\textbf{u}=\textbf{B}^{-1}\textbf{A}_j$. Hvis der ikke er nogen komponent af $\textbf{u}$, som er positiv, så er $\theta ^*=\infty$, den optimale løsnings værdi er $-\infty$, og algorithmen stopper.
 \item Hvis en komponent af $\textbf{u}$ er positiv, så lad 
-$$\theta^*= min_{ \{i=1,\ldots,m|u_i>0 \} }        \dfrac{x_{B(i)}}{u_i}.$$
+$$\theta^*= \underset{\{i=1,\ldots,m|u_i>0 \} }{\text{min}}  \dfrac{x_{B(i)}}{u_i}.$$
 \item Lad $l$ være indekset for $\theta^*=  \dfrac{x_{B(l)}}{u_l}$. Dan et nyt basis ved at udskifte $\textbf{A}_{B(l)}$ med $\textbf{A}_j$. Hvis $\textbf{y}$ er den nye basale mulige løsning, så er værdierne af de nye basale variable $y_j=\theta^*$ og $y_{B(i)}=x_{B(i)}-\theta^*u_i,i\neq l.$
 \end{enumerate}
 \end{tcolorbox}
